# absa-exl-platform

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tflint.hcl  ABSA_EXL_Model_Hosting_Proposal_v3.0.pptx  CLAUDE_CODE_BRIEF.md  CODEOWNERS  Makefile  README.md  pyproject.toml
code-intake/: README.md  pyproject.toml
code-intake/src/code_intake/: __init__.py  cli.py  errors.py  manifest.py  orchestrator.py  package_config.py  venv.py
code-intake/src/code_intake/checkers/: __init__.py  _subprocess_util.py  base.py  pir.py  schema.py  static_python.py  static_sas.py  tests.py
code-intake/tests/: conftest.py  test_checker_base.py  test_checker_pir.py  test_checker_schema.py  test_checker_static_python.py  test_checker_static_sas.py  test_checker_tests.py  test_cli.py  test_e2e_track_a.py  test_errors.py  test_manifest.py  test_orchestrator.py  test_package_config.py  test_pir_extraction.py  test_smoke.py  test_subprocess_timeouts.py  test_venv.py
code-intake/tests/fixtures/broken_pir/: pir.yaml
code-intake/tests/fixtures/broken_pir/python/: score.py
code-intake/tests/fixtures/broken_python/python/: score.py
code-intake/tests/fixtures/broken_sas/sas/: score.sas
code-intake/tests/fixtures/broken_schema/: model_config.yaml
code-intake/tests/fixtures/broken_schema/python/: pyproject.toml  score.py
code-intake/tests/fixtures/broken_tests/python/: conftest.py  score.py
code-intake/tests/fixtures/timeout_python/python/: conftest.py  score.py
code-intake/tests/fixtures/valid_package/: model_config.yaml  pir.yaml
code-intake/tests/fixtures/valid_package/python/: conftest.py  score.py
code-intake/tests/fixtures/valid_package/sas/: score.sas
impl-doc-generator/: README.md  pyproject.toml
impl-doc-generator/examples/: dev-doc-credit-risk-pd.md  implementation-credit-risk-pd-1.0.0.md
impl-doc-generator/src/impl_doc_generator/: __init__.py  bundle.py  cli.py  docparse.py  document.py  errors.py  guard.py  providers.py
impl-doc-generator/tests/: conftest.py  test_bundle.py  test_cli.py  test_docparse.py  test_document.py  test_guard.py
manifest-signer/: README.md  pyproject.toml
manifest-signer/src/manifest_signer/: __init__.py  cli.py  errors.py  publisher.py  signer.py  verifier.py
manifest-signer/tests/: conftest.py  test_canonical_compat.py  test_cli.py  test_e2e.py  test_errors.py  test_publisher.py  test_signer.py  test_smoke.py  test_subject_type_strict.py  test_verifier_offline.py  test_verifier_online.py  test_verify_from_bucket.py
pipeline-factory/: README.md  pyproject.toml
pipeline-factory/config-schema/: README.md
pipeline-factory/configs/credit-risk-pd/1.0.0/: model_config.yaml
pipeline-factory/src/pipeline_factory/: __init__.py  cli.py  errors.py  generator.py  hashing.py  manifest.py  registration.py  renderer.py  upstream_resolver.py
pipeline-factory/src/pipeline_factory/templates/statemachines/: realtime.json.j2  scalable-batch.json.j2  standard-batch.json.j2
pipeline-factory/tests/: conftest.py  test_cli_generate.py  test_cli_register.py  test_generator.py  test_golden_fixture.py  test_hashing.py  test_manifest.py  test_registration.py  test_renderer_scalable.py  test_renderer_standard.py  test_renderer_terraform.py  test_smoke.py  test_upstream_resolver.py
platform-contracts/: pyproject.toml  regenerate-models.sh
platform-contracts/src/platform_contracts/: __init__.py  _base.py  canonical.py  loader.py  models.py
platform-contracts/src/platform_contracts/schemas/: manifest-envelope.schema.json  model-config.schema.json  package-manifest-payload.schema.json  pipeline-manifest-payload.schema.json  pir-mapping.schema.json  registry-record.schema.json
platform-contracts/tests/: test_canonical.py  test_loader.py  test_manifest_envelope_schema.py  test_model_config_schema.py  test_models_match_schema.py  test_pipeline_manifest_payload_schema.py  test_registry_record_schema.py  test_smoke.py
registry/api/: pyproject.toml
registry/api/src/registry_api/: __init__.py  api_models.py  app.py  audit.py  repository.py  routes.py  settings.py  transitions.py
registry/api/tests/: conftest.py  test_api_crud.py  test_api_transitions.py  test_audit.py  test_health_endpoints.py  test_repository.py  test_transitions.py
(+231 files in other folders)
