[project]
name = "code-intake"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "platform-contracts",
    "click>=8.1",
    "jsonschema>=4.21",
    "pyyaml>=6",
]

[project.scripts]
code-intake = "code_intake.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_intake"]

[tool.uv.sources]
platform-contracts = { workspace = true }
