[project]
name = "impl-doc-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "platform-contracts",
    "click>=8.1",
    "pyyaml>=6",
]

# Cloud LLM SDKs are optional extras — the default 'offline' provider needs
# neither, so the component installs + tests without network or API keys.
# Install an extra only on the runtime that calls the real provider.
[project.optional-dependencies]
azure = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]

[project.scripts]
generate-impl-doc = "impl_doc_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impl_doc_generator"]

[tool.uv.sources]
platform-contracts = { workspace = true }
