[project]
name = "impl-doc-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "platform-contracts",
    "click>=8.1",
    "pyyaml>=6",
]

# Optional extras. The default 'offline' provider + markdown/text dev docs need
# none of these, so the component installs + tests without network, API keys, or
# document parsers. Install an extra only on the runtime that needs it:
#   azure/anthropic — the real LLM providers
#   pdf/docx        — ingesting a PDF / Word development document (docparse.py)
[project.optional-dependencies]
azure = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
pdf = ["pypdf>=4"]
docx = ["python-docx>=1.1"]

[project.scripts]
generate-impl-doc = "impl_doc_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impl_doc_generator"]

[tool.uv.sources]
platform-contracts = { workspace = true }
