[project]
name = "pipeline-factory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "platform-contracts",
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6",
    "httpx>=0.27",
    "boto3>=1.34",
    "botocore>=1.34",
]

[project.scripts]
generate-pipeline = "pipeline_factory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_factory"]

[tool.uv.sources]
platform-contracts = { workspace = true }
