[project]
name = "platform-contracts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.20",
    "pydantic>=2.7",
    "email-validator>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_contracts"]
