[project]
name = "registry-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "platform-contracts",
    "fastapi>=0.110",
    "mangum>=0.17",
    "boto3>=1.34.131",
    "pydantic[email]>=2.7",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_api"]

[tool.uv.sources]
platform-contracts = { workspace = true }
